# long_setups_reporter

./: Cargo.toml
config/: config.toml
logs/: app.log.2024-09-14  app.log.2024-09-17  app.log.2024-09-18  app.log.2024-09-20  app.log.2024-09-21  app.log.2024-09-25
src/: config.rs  db.rs  init.rs  logging.rs  mailer.rs  main.rs  models.rs  reports.rs  service.rs  tests.rs  utils.rs
