[package]
name = "long_setups_reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
async-smtp = "0.9.1"
tiberius = {version = "0.12.3", features = ["tokio", "tokio-util", "chrono"]}
