[package]
name = "long_setups_reporter"
version = "0.1.0"
edition = "2021"
default-run = "lsr"

[[bin]]
name = "lsr"
path = "src/main.rs"

[[bin]]
name = "lsrs"
path = "src/service.rs"

[package.metadata.winres]
ProductName = "Long Setups Reporter"
FileDescription = "Long Setups Reporter"
OriginalFilename = "lsr.exe"
LegalCopyright = "dece1ver © 2024"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.132"
config = "0.14.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
tracing-appender = "0.2"
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
async-smtp = "0.9.2"
tiberius = {version = "0.12.3", features = ["tokio", "tokio-util", "chrono"]}
windows-service = "0.7.0"

[profile.release]
opt-level = 'z'     
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true        

[build-dependencies]
winres = "0.1"
